--- a/clockify/pubspec.yaml
+++ b/clockify/pubspec.yaml
@@ -35,22 +35,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
   provider: ^6.0.2
-
   email_validator: ^2.0.1
-
   form_field_validator: ^1.1.0
-
   stop_watch_timer: ^1.3.1
-
   intl: ^0.17.0
-
   geolocator: ^8.2.0
-
   geocoding: ^2.0.4
-
   location: ^4.3.0
+  floor: ^1.2.0
+  grouped_list: ^4.2.0
+  flutter_swipe_action_cell: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +57,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  floor_generator: ^1.2.0
+  build_runner: ^2.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
